--- a/indexformulario.html
+++ b/indexformulario.html
@@ -20,7 +20,11 @@
         <label for="edad">Documento:</label>
         <input type="number" id="edad" name="edad" required><br><br>
 
+        <label for="edad">Direccion:</label>
+        <input type="number" id="edad" name="edad" required><br><br>
 
+        <label for="edad">Correo electronico :</label>
+        <input type="number" id="edad" name="edad" required><br><br>
         
     </form>
 </body>
