--- a/indexformulario.html
+++ b/indexformulario.html
@@ -25,7 +25,10 @@
 
         <label for="edad">Correo electronico :</label>
         <input type="number" id="edad" name="edad" required><br><br>
-        
+
+
+        <label for="edad">ocupacion :</label>
+        <input type="number" id="edad" name="edad" required><br><br>
     </form>
 </body>
 </html>
