--- a/indexformulario.html
+++ b/indexformulario.html
@@ -29,6 +29,10 @@
 
         <label for="edad">ocupacion :</label>
         <input type="number" id="edad" name="edad" required><br><br>
+
+
+        <label for="edad">Fecha de nacimiento :</label>
+        <input type="number" id="edad" name="edad" required><br><br>
     </form>
 </body>
 </html>
